fix: overflow-visible to image

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -49,7 +49,9 @@
   top: -10px;
   left: 0;
   right: 0;
-  bottom: -10px;
+  bottom: 0px;
+  padding: 2rem;
+  box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 990;
   overflow-y: auto;
